<resources>
    <string name="app_name">Malaysia House</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="theme_zone">主題專區</string>
    <string name="map_gps">即時定位</string>
    <string name="search">進階搜尋</string>
    <string name="barchart">銷售行情</string>
    <string name="favorite">收藏閱覽</string>
    <string name="contact_us">聯絡我們</string>
    <string name="language_setting">語系變更</string>
    <string name="q_a">Q&amp;A</string>

    <string name="member_zone">會員專區</string>
    <string name="guest">訪客</string>
    <string name="member_a12345">A12345</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>

    <string name="search_hint">搜尋條件</string>
    <string name="new_house">最新刊登</string>

    <string-array name="search_area">
        <item>州省</item>
        <item>行政區</item>
    </string-array>

    <string-array name="search_options">
        <item>價格區間</item>
        <item>坪數</item>
        <item>用途</item>
        <item>屋齡</item>
        <item>房數</item>
        <item>車位</item>
        <item>類型</item>
        <item>關鍵字</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
